--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -2,6 +2,10 @@ doctype html
 html(lang="ko")
     head
         title #{pageTitle} | Webtube
-    body
-        block content
+        link(rel="stylesheet" href="https://unpkg.com/mvp.css@1.12/mvp.css")
+    body        
+        header
+            h1=pageTitle
+        main
+            block content
     include partials/footer.pug
