--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -4,4 +4,6 @@ block content
     h4 Change Title of video
     form(method="POST")
         input(name="title", placeholder="Video Title", value=video.title, required)
+        input(placeholder="Description", value=video.description required, type="text", name="description" minlength=20)
+        input(placeholder="Hashtags, separated by comma.", value=video.hashtags.join(), required, type="text", name="hashtags")
         input(value="Save", type="submit")
