--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -1,10 +1,13 @@
 extends base
 
 block content
+    if errorMessage
+        span=errorMessage
     form(method="POST")
         input(name="email", type="email", placeholder="email", required)
         input(name="username", type="text", placeholder="username", required)
-        input(name="password", type="password", placeholder="password", required)
+        input(name="password", type="password", placeholder="Password", required)
+        input(name="password2", type="password", placeholder="Confirm Password", required)
         input(name="name", type="text", placeholder="name", required)
         input(name="location", type="text", placeholder="location", required)        
         input(type="submit" value="Join")
