--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -6,8 +6,8 @@ block content
         p=video.description
         small=video.createdAt
     div
-        small Uploaded by
-        a(href=`/users/${owner._id}`)=owner.name
+        small Uploaded by 
+        a(href=`/users/${video.owner._id}`)=video.owner.name
     if String(video.owner) === String(loggedInUser._id)
         a(href=`${video.id}/edit`) Edit Video &rarr;
         br
