--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,6 +1,37 @@
-@import "../scss/_variables";
+// Config
+@import "../scss/config/variables";
+@import "../scss/config/reset.scss";
+
+// Components
+@import "../scss/components/header.scss";
+@import "../scss/components/footer.scss";
+@import "../scss/components/video.scss";
+@import "../scss/components/shared.scss";
+@import "../scss/components/form.scss";
+@import "../scss/components/social-login.scss";
+
+// Screens
+@import "../scss/screens/search.scss";
+@import "../scss/screens/profile.scss";
+@import "../scss/screens/edit-profile.scss";
+
+// Defauluts
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
 
 body {
-    background-color: $red;
-    color: $color;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: $bg;
+    color: white;
+    
+}
+
+main {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 50px;
 }
