--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,8 +8,7 @@ block content
         input(name="password", type="password", placeholder="Password", required)                        
         input(type="submit" value="Login")
         br
-        a(href="/users/github/start") Continue With Github
-    hr
-    div
+        include partials/social-login    
+    div.auth-switch
         span Dont have an account? 
         a(href="/join") Join in now &rarr;
