--- a/src/views/search.pug
+++ b/src/views/search.pug
@@ -2,9 +2,12 @@ extends base.pug
 include mixins/video
 
 block content 
-    form(method="GET")
-        input(placeholder="Search by Title" name="keyword")
-        input(type="submit" value="Search now")
-    div 
+    form(method="GET").search__form
+        input(placeholder="Search by Title" name="keyword")        
+        button 
+            i.fas.fa-search
+    div.video-grid 
         each video in videos
             +video(video) 
+        else
+            span.empty__message No videos found     
