--- a/src/client/scss/components/header.scss
+++ b/src/client/scss/components/header.scss
@@ -27,4 +27,9 @@ header {
         border-radius: 5px;
         color: $bg
     }
+    .header__avatar {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+    }
 }
