video controlers styles 11.11

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -9,6 +9,7 @@
 @import "../scss/components/shared.scss";
 @import "../scss/components/form.scss";
 @import "../scss/components/social-login.scss";
+@import "../scss/components/video-player.scss";
 
 // Screens
 @import "../scss/screens/search.scss";
