logout error fix, profile error fix

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -16,6 +16,7 @@
 @import "../scss/screens/profile.scss";
 @import "../scss/screens/edit-profile.scss";
 @import "../scss/screens/upload.scss";
+@import "../scss//screens/watch.scss";
 
 // Defauluts
 
