--- a/src/client/scss/components/video.scss
+++ b/src/client/scss/components/video.scss
@@ -2,22 +2,21 @@
 
 .video-mixin {
     .video-mixin__thumb {
-        height: 140px;
-        width: 100%;
-        background-color: ivory;
-        border-radius: 7px;
+      height: 140px;
+      border-radius: 7px;
+      width: 100%;
+      background-color: ivory;
     }
-    .viodeo-mixin__data {
-        padding: 0px 15px;
-        .video-mixin__title {
-            font-size: 18px;
-            display: block;
-            margin-top: 10px;
-        }
-        .video-mixin__meta {
-            margin-top: 5px;
-            font-size: 12px;
-            
-        }
+    .video-mixin__data {
+      padding: 0px 15px;
+      .video-mixin__title {
+        font-size: 18px;
+        display: block;
+        margin-top: 10px;
+      }
+      .video-mixin__meta {
+        margin-top: 5px;
+        font-size: 12px;
+      }
     }
-}
+  }
