--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -28,10 +28,11 @@ block content
             a(href=`${video.id}/edit`) Edit Video &rarr;
             br
             a(href=`${video.id}/delete`) Delete Video &rarr;
-    div.video__comments
-        form.video__comment-form#commentForm
-            textarea(cols="30", row="10", placeholder="Write a nice comment...") 
-            button Add Comment 
+    if loggedIn
+        div.video__comments
+            form.video__comment-form#commentForm
+                textarea(cols="30", rows="10", placeholder="Write a nice commment...")
+                button Add Comment 
         
 block scripts
     script(src="/static/js/videoPlayer.js")
