--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -40,7 +40,7 @@ block content
                     i.fas.fa-comment 
                     span #{comment.text}
                     if String(comment.owner) === String(loggedInUser._id)
-                        span ❌
+                        span.delete__icon ❌
         
 block scripts
     script(src="/static/js/videoPlayer.js")
