버전 1 유튜브 클론코딩

--- a/src/client/scss/components/form.scss
+++ b/src/client/scss/components/form.scss
@@ -1,3 +1,10 @@
+.form__container {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 form {
     max-width: 420px;
     margin: 0 auto;
