--- a/src/client/scss/components/video.scss
+++ b/src/client/scss/components/video.scss
@@ -1,11 +1,12 @@
 // video mixins
-
 .video-mixin {
     .video-mixin__thumb {
       height: 140px;
       border-radius: 7px;
-      width: 100%;
+      height: 215px;
       background-color: ivory;
+      background-size: cover;
+      background-position: center;
     }
     .video-mixin__data {
       padding: 0px 15px;
