--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,48 +1,61 @@
 extends base.pug
 
-block content 
-    div#videoContainer(data-id=video.id)
-        video(src="/" + video.fileUrl)
-        div#videoControls.videoControls
-            div.videoControls__play
-                span#play.videoControls__playBtn
-                    i.fas.fa-play
-                div.videoControls__time
-                    span#currentTime 00:00 
-                    span / 
-                    span#totalTime 00:00                   
-            input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
-            div.videoControls__volume
-                input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
-                span#mute
-                    i.fas.fa-volume-up
-            div
-                span#fullScreen
-                    i.fas.fa-expand
-    div.video__data
-        p.video__title=video.title
-        small.video__owner Uploaded by 
-            a(href=`/users/${video.owner._id}`)=video.owner.name
-        small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
-        if String(video.owner._id) === String(loggedInUser._id)
-            a(href=`${video.id}/edit`) Edit Video &rarr;
-            br
-            a(href=`${video.id}/delete`) Delete Video &rarr;
-    if loggedIn
+block content
+    div.watch__container
+        div#videoContainer(data-id=video.id)
+            video(src="/" + video.fileUrl)
+            div#videoControls.videoControls
+                div.videoControls__play
+                    span#play.videoControls__playBtn
+                        i.fas.fa-play
+                    div.videoControls__time
+                        span#currentTime 00:00 
+                        span / 
+                        span#totalTime 00:00                   
+                input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
+                div.videoControls__volume
+                    input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
+                    span#mute
+                        i.fas.fa-volume-up
+                div
+                    span#fullScreen
+                        i.fas.fa-expand
+        div.video__data
+            p.video__title=video.title
+            div.video__info      
+                span.video__info__column          
+                    a(href=`/users/${video.owner._id}`)
+                        img(src=`/${video.owner.avatarUrl}`).video__info__img
+                    span.video__info__owner__name
+                        span=video.owner.name
+                span.video__info__column                    
+                    span.video__info__setting                                                              
+                        if String(video.owner._id) === String(loggedInUser._id)
+                            a(href=`${video.id}/edit`) 비디오 수정 &rarr;
+                            br
+                            a(href=`${video.id}/delete`) 비디오 삭제 &rarr;                
+            div.video__description
+                div.video__description__column
+                    span 조회수 #{video.meta.views} 회
+                    small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
+                div.video__description__column
+                    span=video.description
+        if loggedIn
+            div.video__comments
+                form.video__comment-form#commentForm
+                    textarea(cols="30", rows="10", placeholder="Write a nice commment...")
+                    button Add Comment 
         div.video__comments
-            form.video__comment-form#commentForm
-                textarea(cols="30", rows="10", placeholder="Write a nice commment...")
-                button Add Comment 
-    div.video__comments
-        ul 
-            each comment in video.comments.reverse()
-                li.video__comment(data-id=comment._id)
-                    i.fas.fa-comment 
-                    span #{comment.text}
-                    if String(comment.owner) === String(loggedInUser._id)
-                        span.delete__icon ❌
+            ul 
+                each comment in video.comments.reverse()
+                    li.video__comment(data-id=comment._id)
+                        i.fas.fa-comment 
+                        span #{comment.text}
+                        if String(comment.owner) === String(loggedInUser._id)
+                            span.delete__icon ❌
         
 block scripts
     script(src="/static/js/videoPlayer.js")
+    script(src="/static/js/settingModal.js")
     if loggedIn 
         script(src="/static/js/commentSection.js")
