--- a/src/client/scss/components/footer.scss
+++ b/src/client/scss/components/footer.scss
@@ -1,6 +1,8 @@
 footer {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 12px;   
     opacity: 0.8;
-    margin-top: 50px;
+    height: 10%;
 }
