--- a/src/client/scss/components/shared.scss
+++ b/src/client/scss/components/shared.scss
@@ -1,5 +1,8 @@
 .empty__message {  
-    margin-bottom: 50px;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;        
     font-size: 18px;
 }
 
@@ -7,7 +10,7 @@
     display: grid;
     gap: 50px;
     grid-template-columns: repeat(4, minmax(0, 1fr));
-
+    padding: 20px 50px;
 }
 
 .auth-switch {
