--- a/src/client/scss/screens/watch.scss
+++ b/src/client/scss/screens/watch.scss
@@ -1,10 +1,14 @@
+.watch__container {
+  padding: 20px 50px;
+}
+
 .video__data {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
   .video__title {
     font-size: 26px;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
   }
   .video__createdAt {
     font-size: 12px;
@@ -16,6 +20,47 @@
       color: cornflowerblue;
       text-decoration: underline;
     }
+  }
+  .video__info {
+    display: flex; 
+    justify-content: space-between;
+    align-items: center;  
+    .video__info__column:first-child {
+      display: flex;
+      align-items: center;
+      .video__info__img {
+        width: 42px;
+        height: 42px;
+        border-radius: 50%;
+        margin-right: 10px;
+      }
+    }
+    .video__info__column:last-child {
+      .video__info__setting__icon {
+        display: block;
+        background-color: white;
+        width: 50px;
+        height: 50px;
+        color: black;
+        z-index: 100;
+      }
+    }
+    margin-bottom: 20px;
+  }
+  .video__description {
+    margin-bottom: 20px;
+    .video__description__column:first-child {
+      margin-bottom: 10px;
+      .video__createdAt {
+        margin-left: 10px;
+      }
+    }
+  }
+  .hidden {
+    display: none;
+    visibility: hidden;
+    height: 0px;
+    width: 0px;
   }
 }
 
