--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -19,6 +19,9 @@
 @import "../scss//screens/watch.scss";
 
 // Defauluts
+* {
+  box-sizing: border-box;
+}
 
 a {
     color: inherit;
@@ -29,41 +32,38 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: $bg;
     color: white;
-    
+    height: 100vh;
 }
 
 main {
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 50px;
+  
 }
 
 @keyframes goAway {
-    from {
-      transform: none;
-      opacity: 1;
-    }
-    to {
-      transform: translateY(-50px);
-      opacity: 0;
-    }
+  from {
+    transform: none;
+    opacity: 1;
   }
+  to {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+}
   
-  .message {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    max-width: 200px;
-    padding: 10px 20px;
-    border-radius: 10000px;
-    text-align: center;
-    animation: goAway 0.5s ease-in-out forwards;
-    animation-delay: 5s;
-    &.error {
-      background-color: tomato;
-      color: white;
-    }
+.message {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  max-width: 200px;
+  padding: 10px 20px;
+  border-radius: 10000px;
+  text-align: center;
+  animation: goAway 0.5s ease-in-out forwards;
+  animation-delay: 5s;
+  &.error {
+    background-color: tomato;
+    color: white;
   }
+}
