--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -3,12 +3,13 @@ extends base
 block content
     if errorMessage
         span=errorMessage
-    form(method="POST")        
-        input(name="username", type="text", placeholder="Username", required)
-        input(name="password", type="password", placeholder="Password", required)                        
-        input(type="submit" value="Login")
-        br
-        include partials/social-login    
-    div.auth-switch
-        span Dont have an account? 
-        a(href="/join") Join in now &rarr;
+    div.form__container
+        form(method="POST")        
+            input(name="username", type="text", placeholder="Username", required)
+            input(name="password", type="password", placeholder="Password", required)                        
+            input(type="submit" value="Login")
+            br
+            include partials/social-login    
+        div.auth-switch
+            span Dont have an account? 
+            a(href="/join") Join in now &rarr;
